--- a/week1/templates/greetings.html
+++ b/week1/templates/greetings.html
@@ -5,6 +5,7 @@
     <body>
         <center>
         <h1>Hello, {{name}}! Welcome</h1>
+            <h2>Greetings to you</h2>
         <h4>Your dob is {{dob}}</h4>
         </center>
     </body>
